<resources>
    <string name="app_name">Measuring Body</string>
    <string name="image_app">image_app</string>

    <string name="text_input_manual">Please Input Your Weight, Height and Age.</string>
    <string name="icon_minus">icon_minus</string>
    <string name="icon_plus">icon_plus</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silahkan_ambil_foto">Silahkan Ambil Foto!!</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="scan">Scan</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="size">Size</string>
    <string name="ukuran_baju_yang_cocok_untuk_kamu">Shirt Size That Fits You</string>
    <string name="hint_0">0</string>
    <string name="hint_L">L</string>
    <string name="selesai">Done</string>


    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="text_slide">Stand straight and dont move</string>
    <string name="text_slied2">Make sure you dont wear clothes that are too thick and oversized.</string>
    <string name="img_container_slide">img_container</string>
    <string name="img_vector">img_vector</string>
    <string name="icon_slide">icon_slide</string>
    <string name="icon_arrow">icon_arrow</string>

    <string name="text_signin">Lets Sign you in.\nWelcome back.\nYou’ve been missed!</string>
    <string name="text_dha">Dont have an account yet?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="name">Name</string>
    <string name="text_signup">Create Your Account</string>
</resources>