<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_27374D"
    tools:context=".ui.step.StepTwoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/app_name"
                android:textColor="@color/white_DDE6ED"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivcontainer"
                android:layout_width="wrap_content"
                android:layout_height="318dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/img_container_slide"
                android:src="@drawable/photo_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app" />

            <ImageView
                android:id="@+id/ivvector2"
                android:layout_width="98dp"
                android:layout_height="267dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/img_vector"
                android:src="@drawable/vector_2"
                app:layout_constraintEnd_toEndOf="@+id/ivcontainer"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/ivcontainer"
                app:layout_constraintTop_toTopOf="@+id/ivcontainer" />

            <TextView
                android:id="@+id/text_step2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/step_2"
                android:textColor="@color/white_DDE6ED"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivcontainer" />

            <TextView
                android:id="@+id/text_slide2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="center"
                android:text="@string/text_slied2"
                android:textColor="@color/white_DDE6ED"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_step2" />

            <ImageView
                android:id="@+id/ivslide1"
                android:layout_width="23dp"
                android:layout_height="9dp"
                android:layout_marginTop="52dp"
                android:contentDescription="@string/icon_slide"
                android:src="@drawable/slide_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_slide2" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/icon_arrow"
                android:src="@drawable/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_slide2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>